Issue #6 : Avoir l possibilité d'ajouter une image
