# storage/api-docs/api-docs.json
@@ -371,13 +371,8 @@
                 "requestBody": {
                     "required": true,
                     "content": {
-                        "application/json": {
+                        "multipart/form-data": {
                             "schema": {
-                                "required": [
-                                    "first_name",
-                                    "last_name",
-                                    "email"
-                                ],
                                 "properties": {
                                     "first_name": {
                                         "type": "string",
@@ -406,7 +401,7 @@
                                         "example": "Forward"
                                     },
                                     "image": {
-                                        "description": "Image file",
+                                        "description": "Optional image file",
                                         "type": "string",
                                         "format": "binary"
                                     }
@@ -535,7 +530,7 @@
                     "User"
                 ],
                 "summary": "Update a specific user",
-                "description": "Updates the details of a specific user by ID.",
+                "description": "Updates the details of a specific user by ID. Allows the optional upload of an image.",
                 "operationId": "updateUser",
                 "parameters": [
                     {
@@ -551,9 +546,28 @@
                 "requestBody": {
                     "required": true,
                     "content": {
-                        "application/json": {
+                        "multipart/form-data": {
                             "schema": {
-                                "$ref": "#/components/schemas/User"
+                                "properties": {
+                                    "first_name": {
+                                        "type": "string",
+                                        "example": "John"
+                                    },
+                                    "last_name": {
+                                        "type": "string",
+                                        "example": "Doe"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "example": "john.doe@example.com"
+                                    },
+                                    "image": {
+                                        "description": "Optional image file",
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                },
+                                "type": "object"
                             }
                         }
                     }
@@ -707,7 +721,7 @@
                 }
             }
         },
-        "/api/invitations/confirm": {
+        "/api/v1/invitations/confirm": {
             "post": {
                 "tags": [
                     "Invitation"
